--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -107,6 +107,8 @@ items:
       href: premium-storage.md
     - name: Standard SSD:er
       href: disks-standard-ssd.md
+    - name: Ultra SSD
+      href: disks-ultra-ssd.md
     - name: Premium-lagringsprestanda
       href: premium-storage-performance.md
     - name: Standard Storage
@@ -243,6 +245,14 @@ items:
       href: reserved-vm-instance-size-flexibility.md
   - name: Använda avbildningar
     items:
+    - name: Delade bildgallerier (förhandsversion)
+      items:
+      - name: Översikt
+        href: shared-image-galleries.md
+      - name: Skapa delade bilder med hjälp av CLI
+        href: shared-images.md
+      - name: Felsöka delade bilder
+        href: troubleshooting-shared-images.md
     - name: Hitta och använda avbildningar
       href: cli-ps-findimage.md
     - name: Skapa anpassad bild
@@ -413,8 +423,10 @@ items:
       href: mount-azure-file-storage-on-linux-using-smb.md
     - name: Distribuera diskar med mall
       href: using-managed-disks-template-deployments.md
-    - name: Aktivera Write Accelerator
+    - name: Använda Write Accelerator
       href: how-to-enable-write-accelerator.md
+    - name: Aktivera Ultra SSD
+      href: disks-enable-ultra-ssd.md
     - name: Optimera prestanda
       href: optimization.md
       items:
@@ -555,6 +567,8 @@ items:
   items:
   - name: Skapa mallar
     href: ../../azure-resource-manager/resource-group-authoring-templates.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+  - name: Utveckla din kompetens med Microsoft Learn
+    href: /learn/browse/?products=azure-virtual-machines
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/
   - name: Community-mallar
@@ -569,9 +583,9 @@ items:
     href: https://azure.microsoft.com/documentation/videos/index/?services=virtual-machines
   - name: VANLIGA FRÅGOR OCH SVAR
     href: faq.md
-ms.openlocfilehash: 9207b3d95c1ea8b665ff8f8c0712aed81521f7db
-ms.sourcegitcommit: 776b450b73db66469cb63130c6cf9696f9152b6a
+ms.openlocfilehash: 5ac900d783b72689759bdfe5d2ba47c11aa2157c
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/18/2018
-ms.locfileid: "45982954"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "47035603"
