--- a/articles/azure-stack/user/index.yml
+++ b/articles/azure-stack/user/index.yml
@@ -1,10 +1,16 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: e10dbc5ef0899134a1d629a058412b1eb36df335
+ms.sourcegitcommit: 51a1476c85ca518a6d8b4cc35aed7a76b33e130f
+ms.translationtype: MT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/25/2018
+ms.locfileid: "47163417"
 documentType: LandingData
 title: Användardokumentation om Azure Stack
 metadata:
   document_id: cbf798da-6f1a-7d4d-7707-5d5e02589e22
   title: Dokumentation om Azure Stack – självstudier, API-referens
-  description: Lär dig hur du använder Azure-stacken services och hur man skapar appar för Azure-stacken.
+  description: Lär dig hur du använder Azure Stack-tjänster och hur du skapar appar för Azure Stack.
   services: azure-stack
   author: jeffgilb
   manager: femila
@@ -12,16 +18,10 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 04/13/2018
+  ms.date: 09/25/2018
   ms.author: jeffgilb
-  ms.openlocfilehash: 4b258290b197ff4fdee9490012a36519b041622c
-  ms.sourcegitcommit: c47ef7899572bf6441627f76eb4c4ac15e487aec
-  ms.translationtype: MT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/04/2018
-  ms.locfileid: "33205439"
 abstract:
-  description: Med Azure Stack, som är en plattform för hybridmoln, kan du använda Azure-tjänster från företagets eller leverantörens datacenter. Som utvecklare kan du skapa appar på Azure Stack. Du kan sedan distribuera dem till Azure Stack, till Azure eller skapa äkta hybridappar som utnyttjar anslutningen mellan ett Azure Stack-moln och Azure. Lär dig mer om att skapa resurser och distribuera appar med våra snabbstarter och självstudier.<br/><br/>Om du är operatör Azure Stack som hanterar infrastrukturen och erbjuder tjänster, finns våra <a href="/azure/azure-stack/">operatorn dokumentationen</a>.<br/><br/>Om du är operatör Azure-stacken är intresserad av i den Azure Stack Development Kit (ASDK), en enda nod distribution av Azure-stacken som du kan hämta och använda gratis Se vår <a href="/azure/azure-stack/asdk">ASDK dokumentationen</a>.
+  description: Med Azure Stack, som är en plattform för hybridmoln, kan du använda Azure-tjänster från företagets eller leverantörens datacenter. Som utvecklare kan du skapa appar på Azure Stack. Du kan sedan distribuera dem till Azure Stack, till Azure eller skapa äkta hybridappar som utnyttjar anslutningen mellan ett Azure Stack-moln och Azure. Lär dig mer om att skapa resurser och distribuera appar med våra snabbstarter och självstudier.<br/><br/>Om du är en Azure Stack-operatör som hanterar infrastrukturen och erbjuder tjänster, se vår <a href="/azure/azure-stack/">operatorn dokumentation</a>.<br/><br/>Om du är intresserad av i den Azure Stack Development Kit (ASDK), en nod-distribution av Azure Stack som du kan hämta och använda gratis Azure Stack-operatör finns i vår <a href="/azure/azure-stack/asdk">ASDK dokumentation</a>.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
@@ -62,13 +62,19 @@ sections:
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: Distribuera program i både Azure och Azure-stacken.
+    text: Distribuera program i både Azure och Azure Stack.
   - type: list
     style: ordered
     items:
     - html: <a href="/azure/azure-stack/user/azure-stack-solution-pipeline">Distribuera appar till Azure Stack och Azure</a>
-    - html: <a href="/azure/azure-stack/user/azure-stack-solution-hybrid-identity">Konfigurera hybrididentitet moln med Azure och Azure Stack-program</a>
-    - html: <a href="/azure/azure-stack/user/azure-stack-solution-hybrid-connectivity">Konfigurera molnet för hybridanslutning med Azure och Azure-stacken</a>
+    - html: <a href="/azure/azure-stack/user/azure-stack-solution-hybrid-identity">Konfigurera hybrid cloud-identitet med Azure och Azure Stack-program</a>
+    - html: <a href="/azure/azure-stack/user/azure-stack-solution-hybrid-connectivity">Konfigurera hybrid cloud anslutningen till Azure och Azure Stack</a>
+    - html: <a href="/azure/azure-stack/user/azure-stack-solution-machine-learning">Skapa en edge-machine learning-lösning med Azure och Azure Stack</a>
+    - html: <a href="/azure/azure-stack/user/azure-stack-solution-staged-data-analytics">Skapa en lösning för dataanalys av mellanlagrade data med Azure och Azure Stack </a>
+    - html: <a href="/azure/azure-stack/user/azure-stack-solution-cloud-burst">Skapa molnöverskridande skalning lösningar med Azure</a>
+    - html: <a href="/azure/azure-stack/user/azure-stack-solution-geo-distributed">Skapa en applösning för geo-distribuerad med Azure och Azure Stack</a>
+    - html: <a href="/azure/azure-stack/user/azure-stack-tutorial-sql">Skapa SQL-databaser med hög tillgänglighet</a>
+    - html: <a href="/azure/azure-stack/user/azure-stack-tutorial-mysql">Skapa högtillgängliga MySQL-databaser</a>
 - title: Referens
   items:
   - type: list
@@ -76,4 +82,4 @@ sections:
     className: cardsD
     items:
     - title: Kommandorad
-      html: <p><a href="/powershell/azure/azure-stack/overview?view=azurestackps-1.2.10">Azure Stack PowerShell</a></p><p><a href="/cli/azure/reference-index?view=azure-cli-2017-03-09-profile">Azure CLI-stacken</a></p>
+      html: <p><a href="/powershell/azure/azure-stack/overview?view=azurestackps-1.2.10">Azure Stack PowerShell</a></p><p><a href="/cli/azure/reference-index?view=azure-cli-2017-03-09-profile">Azure Stack CLI</a></p>
