--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -5,26 +5,28 @@ items:
   items:
   - name: Översikt
     href: apache-domain-joined-introduction.md
-  - name: Planera för domänanslutna kluster
+  - name: Planera för ESP-kluster
     href: apache-domain-joined-architecture.md
-  - name: Konfigurera domänanslutna kluster med Azure AD DS
+  - name: Konfigurera ESP-kluster med Azure AD DS
     href: apache-domain-joined-configure-using-azure-adds.md
   - name: Synkronisera Azure AD-användare till ett HDInsight-kluster
     href: ../hdinsight-sync-aad-users-to-cluster.md
     maintainContext: true
   - name: Konfigurera Hive-principer
     href: apache-domain-joined-run-hive.md
+  - name: Konfigurera Kafka-principer
+    href: apache-domain-joined-run-kafka.md
     maintainContext: true
-  - name: Använda VSCode för att länka till domänanslutna kluster
+  - name: Använda VSCode för att länka till ESP-kluster
     href: ../hdinsight-for-vscode.md
     maintainContext: true
-  - name: Använda IntelliJ för att länka till domänanslutna kluster
+  - name: Använda IntelliJ för att länka till ESP-kluster
     href: ../spark/apache-spark-intellij-tool-plugin.md
     maintainContext: true
-  - name: Använda Eclipse för att länka till domänanslutna kluster
+  - name: Använda Eclipse för att länka till ESP-kluster
     href: ../spark/apache-spark-eclipse-tool-plugin.md
     maintainContext: true
-  - name: Använda Oozie i domänanslutna kluster
+  - name: Använda Oozie i ESP-kluster
     href: hdinsight-use-oozie-domain-joined-clusters.md
 - name: Skydda data
   href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
@@ -60,8 +62,14 @@ items:
     href: https://azure.microsoft.com/en-us/resources/samples/?service=hdinsight
   - name: Azure PowerShell
     href: /powershell/module/azurerm.hdinsight
-  - name: .NET (Hadoop)
-    href: https://docs.microsoft.com/dotnet/api/overview/azure/hd-insight?view=azure-dotnet
+  - name: .NET SDK
+    href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet
+  - name: Python SDK
+    href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python
+  - name: Java SDK
+    href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-preview
+  - name: Go SDK
+    href: ../hdinsight-go-sdk-overview.md
   - name: .NET (HBase)
     href: https://www.nuget.org/packages/Microsoft.HBase.Client/
   - name: .NET (Avro)
@@ -92,9 +100,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 130ff5525a19a6ea08c99c5ccce7ea8888477743
-ms.sourcegitcommit: 1af4bceb45a0b4edcdb1079fc279f9f2f448140b
+ms.openlocfilehash: a4ebcb8f7beac49568e533fab0d1798933a45cad
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/09/2018
-ms.locfileid: "41927054"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "47039339"
