--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -28,6 +28,8 @@ items:
     href: logic-apps-serverless-overview.md
   - name: B2B-integrering och EDI-bearbetning
     href: logic-apps-enterprise-integration-overview.md
+  - name: Åtkomst till virtuella Azure-nätverk (VNET)
+    href: connect-virtual-network-vnet-isolated-environment-overview.md
 - name: Instruktionsguider
   items:
   - name: Utveckla
@@ -36,6 +38,8 @@ items:
       href: logic-apps-create-logic-apps-from-templates.md
     - name: Migrera från BizTalk Services
       href: logic-apps-move-from-mabs.md
+    - name: Skapa logikappar – Visual Studio Code
+      href: create-logic-apps-visual-studio-code.md
     - name: Kontrollera arbetsflödeskörning
       items:
       - name: Villkorssatser
@@ -68,8 +72,12 @@ items:
       href: logic-apps-exception-handling.md
     - name: Hantera stora meddelanden
       href: logic-apps-handle-large-messages.md
-    - name: Skydda dina logikappar
-      href: logic-apps-securing-a-logic-app.md
+    - name: Skydda
+      items:
+      - name: Skydda dina logikappar
+        href: logic-apps-securing-a-logic-app.md
+      - name: Autentisera med hanterade identiteter
+        href: create-managed-service-identity.md
     - name: Utveckla anpassade anslutningsappar
       href: custom-connector-overview.md
     - name: Utveckla anpassade API:er
@@ -139,6 +147,8 @@ items:
       href: logic-apps-enterprise-integration-b2b-list-errors-solutions.md
     - name: Skapa en haveriberedskapsplan
       href: logic-apps-enterprise-integration-b2b-business-continuity.md
+  - name: Ansluta till virtuella nätverk med isolerade miljöer
+    href: connect-virtual-network-vnet-isolated-environment.md
   - name: Komma åt lokala data
     items:
     - name: Installera datagateway
@@ -227,14 +237,18 @@ items:
       href: ../connectors/connectors-create-api-rss.md
     - name: Salesforce
       href: ../connectors/connectors-create-api-salesforce.md
-    - name: SAP
+    - name: SAP (ny)
       href: logic-apps-using-sap-connector.md
+    - name: SAP
+      href: logic-apps-using-sap-connector-old.md
     - name: Schema
       href: ../connectors/connectors-native-recurrence.md
     - name: SendGrid
       href: ../connectors/connectors-create-api-sendgrid.md
     - name: SFTP
       href: ../connectors/connectors-create-api-sftp.md
+    - name: SFTP – SSH
+      href: ../connectors/connectors-sftp-ssh.md
     - name: SharePoint
       href: ../connectors/connectors-create-api-sharepoint.md
     - name: Slack
@@ -357,9 +371,9 @@ items:
     href: https://customers.microsoft.com/en-us/search?sq=%22Azure%20Logic%20Apps%20%22&ff=story_product_categories%26%3EAzure&p=0&so=story_publish_date%20desc
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=logic-apps&sort=newest
-ms.openlocfilehash: 2b3670c807d02531e5b868f554eb3b80f65250f2
-ms.sourcegitcommit: 2ad510772e28f5eddd15ba265746c368356244ae
+ms.openlocfilehash: f8546e49cd382e7a5b8cbee735e361b84bb729d4
+ms.sourcegitcommit: cc4fdd6f0f12b44c244abc7f6bc4b181a2d05302
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/28/2018
-ms.locfileid: "43124009"
+ms.lasthandoff: 09/25/2018
+ms.locfileid: "47064007"
