--- a/articles/machine-learning/data-science-virtual-machine/toc.yml
+++ b/articles/machine-learning/data-science-virtual-machine/toc.yml
@@ -1,73 +1,81 @@
+items:
 - name: Dokumentation om virtuella datorer för datavetenskap
   href: index.yml
-  items: null
 - name: Översikt
-  expanded: true
   items:
-    - name: Vad är en virtuell dator för datavetenskap?
-      href: overview.md
-    - name: Vad är en virtuell dator för djupinlärning?
-      href: deep-learning-dsvm-overview.md
-    - name: Vad är en virtuell Geo-AI-dator för datavetenskap?
-      href: geo-ai-dsvm-overview.md
+  - name: Vad är en virtuell dator för datavetenskap?
+    href: overview.md
+  - name: Vad är en virtuell dator för djupinlärning?
+    href: deep-learning-dsvm-overview.md
+  - name: Vad är en virtuell Geo-AI-dator för datavetenskap?
+    href: geo-ai-dsvm-overview.md
+  expanded: true
 - name: Kom igång
   items:
-    - name: Skapa en virtuell Windows-dator för datavetenskap
-      href: provision-vm.md
-    - name: Skapa en virtuell Ubuntu-dator för datavetenskap
-      href: dsvm-ubuntu-intro.md
-    - name: Skapa en virtuell CentOS-dator för datavetenskap
-      href: linux-dsvm-intro.md
-    - name: Skapa en virtuell dator för djupinlärning
-      href: provision-deep-learning-dsvm.md
-    - name: Skapa en virtuell Geo-AI-dator för datavetenskap
-      href: provision-geo-ai-dsvm.md
+  - name: Skapa en virtuell Windows-dator för datavetenskap
+    href: provision-vm.md
+  - name: Skapa en virtuell Ubuntu-dator för datavetenskap
+    href: dsvm-ubuntu-intro.md
+  - name: Skapa en virtuell CentOS-dator för datavetenskap
+    href: linux-dsvm-intro.md
+  - name: Skapa en virtuell dator för djupinlärning
+    href: provision-deep-learning-dsvm.md
+  - name: Skapa en virtuell Geo-AI-dator för datavetenskap
+    href: provision-geo-ai-dsvm.md
 - name: Gör så här för att
   items:
-    - name: Använd en virtuell Windows-dator för datavetenskap
-      href: vm-do-ten-things.md
-    - name: Använd en virtuell Linux-dator för datavetenskap
-      href: linux-dsvm-walkthrough.md
-    - name: Använd en virtuell dator för djupinlärning
-      href: use-deep-learning-dsvm.md
-    - name: Använda en virtuell Geo-AI-dator för datavetenskap
-      href: use-geo-ai-dsvm.md
+  - name: Använd en virtuell Windows-dator för datavetenskap
+    href: vm-do-ten-things.md
+  - name: Använd en virtuell Linux-dator för datavetenskap
+    href: linux-dsvm-walkthrough.md
+  - name: Använd en virtuell dator för djupinlärning
+    href: use-deep-learning-dsvm.md
+  - name: Använda en virtuell Geo-AI-dator för datavetenskap
+    href: use-geo-ai-dsvm.md
 - name: Riktlinjer för Enterprise
   items:
-    - name: Översikt
-      href: dsvm-enterprise-overview.md
-    - name: Skalning
-      href: dsvm-pools.md
-    - name: Active Directory-integrering
-      href: dsvm-common-identity.md
-    - name: Skydda autentiseringsuppgifter för resursåtkomst
-      href: dsvm-secure-access-keys.md
+  - name: Översikt
+    href: dsvm-enterprise-overview.md
+  - name: Skalning
+    href: dsvm-pools.md
+  - name: Active Directory-integrering
+    href: dsvm-common-identity.md
+  - name: Skydda autentiseringsuppgifter för resursåtkomst
+    href: dsvm-secure-access-keys.md
 - name: Referens
-  expanded: true
   items:
-    - name: Utforska DSVM
-      href: dsvm-tools-overview.md
-    - name: Ramverk för djupinlärning och AI
-      href: dsvm-deep-learning-ai-frameworks.md
-    - name: Verktyg för ML and datavetenskap
-      href: dsvm-ml-data-science-tools.md
-    - name: Språk
-      href: dsvm-languages.md
-    - name: Utvecklingsverktyg
-      href: dsvm-tools-development.md
-    - name: Verktyg för datainhämtning
-      href: dsvm-tools-ingestion.md
-    - name: Verktyg för utforskning och visualisering av data
-      href: dsvm-tools-explore-and-visualize.md
-    - name: Dataplattformar
-      href: dsvm-data-platforms.md
-    - name: Exempel och genomgångar
-      href: dsvm-samples-and-walkthroughs.md
+  - name: Utforska DSVM
+    href: dsvm-tools-overview.md
+  - name: Ramverk för djupinlärning och AI
+    href: dsvm-deep-learning-ai-frameworks.md
+  - name: Verktyg för ML and datavetenskap
+    href: dsvm-ml-data-science-tools.md
+  - name: Språk
+    href: dsvm-languages.md
+  - name: Utvecklingsverktyg
+    href: dsvm-tools-development.md
+  - name: Verktyg för datainhämtning
+    href: dsvm-tools-ingestion.md
+  - name: Verktyg för utforskning och visualisering av data
+    href: dsvm-tools-explore-and-visualize.md
+  - name: Dataplattformar
+    href: dsvm-data-platforms.md
+  - name: Exempel och genomgångar
+    href: dsvm-samples-and-walkthroughs.md
+  expanded: true
 - name: Resurser
   items:
-    - name: Blogg
-      href: 'https://blogs.technet.microsoft.com/machinelearning/tag/dsvm/'
-    - name: MSDN-forum
-      href: 'https://social.microsoft.com/Forums/en-US/home?forum=dsvm'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/search?q=dsvm'
+  - name: Utvecklarguide för R
+    href: ../r-developers-guide.md
+  - name: Blogg
+    href: https://blogs.technet.microsoft.com/machinelearning/tag/dsvm/
+  - name: MSDN-forum
+    href: https://social.microsoft.com/Forums/en-US/home?forum=dsvm
+  - name: Stack Overflow
+    href: https://stackoverflow.com/search?q=dsvm
+ms.openlocfilehash: e1617f3f5c36a5b006003e2f375dfac4143af7cd
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "47032572"
