--- a/articles/active-directory/authentication/TOC.yml
+++ b/articles/active-directory/authentication/TOC.yml
@@ -114,6 +114,8 @@ items:
     href: howto-password-smart-lockout.md
   - name: Windows Hello för företag
     href: https://docs.microsoft.com/windows/security/identity-protection/hello-for-business/hello-identity-verification
+  - name: Lösenordslös inloggning via telefon
+    href: howto-authentication-phone-sign-in.md
   - name: Certifikatbaserad autentisering
     items:
     - name: Komma igång med certifikatbaserad autentisering
@@ -211,9 +213,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-active-directory
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory
-ms.openlocfilehash: 83ad45c90c964df880c2b7fb79fcd3fdff214fbe
-ms.sourcegitcommit: af60bd400e18fd4cf4965f90094e2411a22e1e77
+ms.openlocfilehash: b7f96b2ede36e9889dc42be500fb16d0ecfd5af1
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/07/2018
-ms.locfileid: "44091551"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "47037584"
