--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -95,7 +95,9 @@ items:
     - name: Utdata från Runbooks
       href: automation-runbook-output-and-messages.md
     - name: Källkontrollsintegrering
-      href: automation-source-control-integration.md
+      href: source-control-integration.md
+    - name: Källkontrollsintegrering – föråldrad
+      href: automation-source-control-integration-legacy.md
     - name: Skapa runbook-flöden med grafisk runbook-SDK
       href: graphical-runbook-sdk.md
   - name: Automatisera
@@ -186,8 +188,6 @@ items:
     items:
     - name: Vidarebefordra jobbdata från Azure Automation till Log Analytics
       href: automation-manage-send-joblogs-log-analytics.md
-    - name: Ta bort länk till Azure Automation-konto från Log Analytics
-      href: automation-unlink-from-log-analytics.md
   - name: Migrera
     items:
     - name: Migrera från Orchestrator
@@ -236,9 +236,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-automation
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=automation
-ms.openlocfilehash: 4aee3acac6fa1446a186187048a2fe7dc8f3f530
-ms.sourcegitcommit: 8b694bf803806b2f237494cd3b69f13751de9926
+ms.openlocfilehash: 102f70d3c0ea4c87b47e2a0967da967b7eef73f6
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/20/2018
-ms.locfileid: "46498682"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "47040320"
