--- a/articles/azure-databricks/TOC.yml
+++ b/articles/azure-databricks/TOC.yml
@@ -55,6 +55,8 @@ items:
     href: https://docs.azuredatabricks.net/release-notes/index.html
   - name: Dokumentation för Databricks
     href: https://docs.azuredatabricks.net/user-guide/index.html
+  - name: Utvecklarguide för R
+    href: ../machine-learning/r-developers-guide.md
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/?category=analytics
   - name: Prissättning
@@ -65,9 +67,9 @@ items:
     href: https://azure.microsoft.com/regions/services/
   - name: Supportalternativ
     href: https://azure.microsoft.com/support/options/
-ms.openlocfilehash: ad9351e33f87897a1b9d1d99a6d7317835b8ce10
-ms.sourcegitcommit: baed5a8884cb998138787a6ecfff46de07b8473d
+ms.openlocfilehash: 87ad5331f017901a8d96e5230e63412a03898823
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/28/2018
-ms.locfileid: "43115195"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "47036190"
